--- a/historico_motor.html
+++ b/historico_motor.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Histórico Motores</title>
-</head>
-<body>
-    <h1>Histórico Motores</h1>
-    <p>Histórico ainda não implementado.</p>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Histórico Motor</title></head><body><h1>Histórico Motor</h1></body></html>
