--- a/login.html
+++ b/login.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Login WIN Validator</title>
-</head>
-<body>
-    <h2>Login</h2>
-    <form onsubmit="login(); return false;">
-        <label for="username">Utilizador:</label>
-        <input type="text" id="username"><br>
-        <label for="password">Palavra-passe:</label>
-        <input type="password" id="password"><br>
-        <button type="submit">Entrar</button>
-    </form>
-    <script>
-        function login() {
-            const user = document.getElementById("username").value;
-            const pass = document.getElementById("password").value;
-            if (user === "admin" && pass === "Admin2025") {
-                window.location.href = "validador.html";
-            } else {
-                alert("Credenciais inválidas.");
-            }
-        }
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Login</title></head><body><h1>Login Page</h1></body></html>
