--- a/historico_win.html
+++ b/historico_win.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Histórico WIN</title>
-</head>
-<body>
-    <h1>Histórico WIN</h1>
-    <p>Histórico ainda não implementado.</p>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Histórico WIN</title></head><body><h1>Histórico WIN</h1></body></html>
