--- a/validador.html
+++ b/validador.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Validador WIN & Motores</title>
-</head>
-<body>
-    <h1>Validador WIN & Motores</h1>
-    <p>Funcionalidade em construção. Versão base.</p>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Validador WIN e Motores</title></head><body><h1>Validador</h1></body></html>
