--- a/historico_motor.html
+++ b/historico_motor.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><title>Histórico Motor</title></head><body><h1>Histórico Motor</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt">
+<head><meta charset="UTF-8"><title>Histórico Motores</title></head>
+<body>
+  <h1>Histórico Motores</h1>
+  <p>Histórico ainda não implementado.</p>
+  <a href="validador.html">Voltar</a>
+</body>
+</html>
