--- a/validador.html
+++ b/validador.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>Validador WIN e Motores</title></head><body><h1>Validador</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <title>Validador WIN & Motores</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <h1>Validador WIN & Motores</h1>
+  <div id="conteudo">
+    <!-- Conteúdo dinâmico aqui -->
+  </div>
+  <footer>
+    <a href="historico_win.html">Histórico WIN</a> |
+    <a href="historico_motor.html">Histórico Motores</a>
+  </footer>
+</body>
+</html>
