--- a/login.html
+++ b/login.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Login</h1>
-  <form onsubmit="return login()">
-    <label>Utilizador: <input type="text" id="username"></label><br>
-    <label>Password: <input type="password" id="password"></label><br>
-    <button type="submit">Entrar</button>
-  </form>
-  <script>
-    function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      if (user === "admin" && pass === "Admin2025") {
-        window.location.href = "validador.html";
-        return false;
-      }
-      alert("Credenciais inválidas");
-      return false;
-    }
-  </script>
-</body>
-</html>
+<h1>Login</h1><p>Formulário será implementado aqui.</p>
