--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="refresh" content="0; URL='login.html'" />
-    <title>Redirecionamento</title>
-</head>
-<body>
-    <p>Redirecionando para a página de login...</p>
-</body>
-</html>
+<script>window.location.href='validador.html';</script>
